--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -50,6 +50,6 @@ en:
   mail_view_joined: Your request to join %{team} was approved! You can now go to the
     team
   mail_view_rejected_to_join: Sorry, but your request to join %{team} was rejected.
-  mail_view_request_to_join: "%{user} (%{handle}) wants to join \\"
+  mail_view_request_to_join: "%{user} (%{handle}) wants to join %{team} team on Check!"
   mail_view_process_request: 'To process this request, please login and visit:'
   pender_could_not_parse: Could not parse this media
