--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,8 +47,8 @@ en:
   mail_view_welcome: Welcome to Check
   mail_view_register: 'You are only one step away from using Check! Please confirm
     your email address by clicking the following link:'
-  mail_view_joined: Your request to join %{team} was approved! You can now go to the
-    team
+  mail_view_joined: Your request to join %{team} was approved! You can now go to %{url}
+    and start contributing!
   mail_view_rejected_to_join: Sorry, but your request to join %{team} was rejected.
   mail_view_request_to_join: "%{user} (%{handle}) wants to join %{team} team on Check!"
   mail_view_process_request: 'To process this request, please login and visit:'
