--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,8 +16,10 @@ en:
         user:
           attributes:
             email:
-              taken: 'Oops, minor problem: you already used that email address to sign in with another method.
-              We just sent you an email reminding you how you logged in. Check your email and sign in with the method you used before.'
+              taken: 'Oops, minor problem: you already used that email address to
+                sign in with another method. We just sent you an email reminding you
+                how you logged in. Check your email and sign in with the method you
+                used before.'
   devise:
     failure:
       invalid: Invalid %{authentication_keys} or password.
@@ -53,8 +55,10 @@ en:
   mail_view_process_request: 'To process this request, please login and visit:'
   pender_could_not_parse: Could not parse this media
   mail_duplicate_email_exists: Your Login Method for Check
-  mail_duplicate_email_exists_body: "<p>Hello, this is just a friendly reminder to help make sure you get logged in to Check.</p>
-    <p>What happened: You tried to sign in to Check with %{login_with} %{user_email}. But this email address is already associated with %{provider_prefix} %{provider}-based account in Check.</p>
-      <p>What to do next: Sign in with %{provider}.</p>
-      <p>Then you'll be logged in with the account you were using before. If you need additional help, please email check@meedan.com. 👋</p>
-      <p>— The Check team</p>"
+  mail_duplicate_email_exists_body: "<p>Hello, this is just a friendly reminder to
+    help make sure you get logged in to Check.</p> <p>What happened: You tried to
+    sign in to Check with %{login_with} %{user_email}. But this email address is already
+    associated with %{provider_prefix} %{provider}-based account in Check.</p> <p>What
+    to do next: Sign in with %{provider}.</p> <p>Then you'll be logged in with the
+    account you were using before. If you need additional help, please email check@meedan.com.
+    </p> <p>— The Check team</p>"
