--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -15,7 +15,7 @@ fr:
         user:
           attributes:
             email:
-              taken: Il semble que votre adresse e-mail est déjà prise. Si vous rencontrez des difficultés en vous connectant, veuillez contacter check@meedan.com et quelqu'un vous répondra très rapidement.
+              taken: 'Petit problème : Votre adresse courriel est associée à une connexion Check différente de celle que vous venez d''utiliser. Nous vous avons envoyé un courriel pour vous la rappeler. Prière de lire le message et de vous connecter de la même façon.'
   devise:
     failure:
       invalid: Mot de passe ou %{authentication_keys} non valide.
@@ -46,3 +46,5 @@ fr:
   mail_view_request_to_join: "%{user} (%{handle}) demande à se joindre à l'équipe %{team} sur Check !"
   mail_view_process_request: 'Pour traiter cette requête, prière de vous connecter et de visiter:'
   pender_could_not_parse: Ce n'était pas possible d'analyser ce média
+  mail_duplicate_email_exists: Votre connexion à Check
+  mail_duplicate_email_exists_body: "<p>Bonjour, ceci est un rappel pour vous aider à vous connecter à Check.</p> <p>En bref : Vous avez tenté de vous connecter via %{login_with} %{user_email}. Mais cette adresse courriel est déjà associée à votre compte Check via %{provider_prefix} %{provider}.</p> <p>Quoi faire ? Connectez-vous à Check via %{provider}.</p> <p>Vous serez alors connecté au même compte que vous aviez déjà utilisé. Pour plus d'infos, contactez-nous à check@meedan.com. </p> <p>— L'équipe Check</p>"
