--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -45,6 +45,7 @@ en:
   slack_create_project: "*%{user}* created a project: <%{url}>"
   slack_create_team_user: "*%{user}* joined <%{url}>"
   slack_create_project_media: "*%{user}* added a new %{type}: <%{url}>"
+  slack_create_task: "*%{user}* created task <%{url}> in %{project} with note '%{note}'"
   slack_answer_task: "*%{user}* answered the task <%{url}> in %{project}:\\n> %{response}\\n*Note:*\\n>
     %{note}"
   slack_update_task_label: "*%{user}* edited task <%{url}> in %{project}:\\n*From:*
