--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -77,3 +77,4 @@ en:
     before. If you need additional help, please email check@meedan.com.</p> <p>— The
     Check team</p>"
   mail_duplicate_email_exists_email: email
+  slack_restricted_join_to_members: "Sorry, you cannot join %{team_name} because it is restricted to members of the Slack %{pluralize} %{teams}."
