Ticket #5645: Password reset flow
- On Admin UI, a "Send reset password instructions" button appears to
  every user with blank provider (blank === email)
- Clicking this button triggers the regular password reset flow: email
  is sent to user with a temporary link to reset their password
- The e-mail is sent in English
- The user receives an email with a link to reset password and click on
  it
- The user sees a page with the fields "New password" and "Confirm new
  password"
- If the password is OK (8 characters length and password/password
  confirmation match), the user sees the json response for success
  `{:message=>{:type=>"success"}, :status=>200}`
- If the password is not OK the user needs to fill in the fields again

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -79,3 +79,7 @@ en:
   mail_duplicate_email_exists_email: email
   slack_restricted_join_to_members: Sorry, you cannot join %{team_name} because it
     is restricted to members of the Slack team(s) %{teams}.
+  admin:
+    actions:
+      send_reset_password_email:
+        menu: 'Send reset password instructions'
