Add missing media type strings #5812

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,8 @@
 en:
   link: Link
   claim: Claim
+  uploadedimage: Image
+  uploadefile: File
   errors:
     messages:
       extension_white_list_error: "cannot have type %{extension}, allowed types: %{allowed_types}"
