--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1,1 +1,7 @@
-ar: {}
+ar:
+  link: رابط
+  activerecord:
+    attributes:
+      tag:
+        data: وسم
+  mail_request_to_join: "لقد طلب %{user} الانضمام لفريق %{team} على !Check"
