--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,10 +4,10 @@ en:
   claim: Claim
   uploadedimage: Image
   uploadefile: File
-  blank: (blank)
+  blank: "(blank)"
   errors:
     messages:
-      extension_white_list_error: "cannot have type %{extension}, allowed types: %{allowed_types}"
+      extension_white_list_error: 'cannot have type %{extension}, allowed types: %{allowed_types}'
   activerecord:
     attributes:
       tag:
@@ -44,16 +44,24 @@ en:
   rejected: not approved
   mail_request_to_join_processed: Your request to join %{team} on Check was %{status}
   mail_new_account: New account for you on Check
-  slack_update_status: "*%{user}* changed the verification status on %{url}  in *%{project}* from _%{previous_status}_ to *%{current_status}*"
-  slack_save_embed: "*%{user}* changed a report title in *%{project}* from _%{from}_ to %{to}"
+  slack_update_status: "*%{user}* changed the verification status on %{url}  in *%{project}*
+    from _%{previous_status}_ to *%{current_status}*"
+  slack_save_embed: "*%{user}* changed a report title in *%{project}* from _%{from}_
+    to %{to}"
   slack_save_comment: "*%{user}* added a note to %{url} in *%{project}*: %{comment}"
   slack_create_project: "*%{user}* created a project: %{url}"
   slack_create_team_user: "*%{user}* joined team %{url}"
   slack_create_project_media: "*%{user}* added a new %{type} to *%{project}*: %{url}"
   slack_create_task: "*%{user}* created task %{url} in *%{project}* with note: %{note}"
-  slack_answer_task: "*%{user}* answered task %{url} in *%{project}*: %{response}\n*Note:* %{note}"
-  slack_update_task_label: "*%{user}* edited task %{url} in *%{project}* from: %{from}\n*To:* %{to}"
-  slack_update_task_description: "*%{user}* edited task note at %{url} in *%{project}* from: %{from}\n*To:* %{to}"
+  slack_answer_task: |-
+    *%{user}* answered task %{url} in *%{project}*: %{response}
+    *Note:* %{note}
+  slack_update_task_label: |-
+    *%{user}* edited task %{url} in *%{project}* from: %{from}
+    *To:* %{to}
+  slack_update_task_description: |-
+    *%{user}* edited task note at %{url} in *%{project}* from: %{from}
+    *To:* %{to}
   mail_view_welcome: Welcome to Check
   mail_view_register: 'You are only one step away from using Check! Please confirm
     your email address by clicking the following link:'
