Ticket #5781: Add string on locale for export_data link on Admin UI

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -103,4 +103,6 @@ en:
     actions:
       send_reset_password_email:
         menu: Send reset password instructions
+      export_project:
+        menu: Export project data
   reset_password_instructions: Check reset password instructions
