--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,6 +23,8 @@ en:
         file: File
       uploaded_image:
         file: Image
+      team:
+        slug: Slug
     errors:
       messages:
         too_short:
