--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -4,6 +4,39 @@ fr:
   uploadedimage: image
   uploadefile: fichier
   blank: "(vide)"
+  statuses:
+    media:
+      undetermined:
+        label: Pas commencé
+        description: 'Par défault : récemment ajouté, le travail n''a pas commencé'
+      not_applicable:
+        label: Inconcluant
+        description: Aucune conclusion définitive ne peut être tirée avec les données actuelles
+      in_progress:
+        label: En cours
+        description: Le travail a commencé, mais pas encore de conclusion tirée
+      not_true:
+        label: 'Faux'
+        description: 'Conclusion : le rapport est faux'
+      verified:
+        label: Confirmé
+        description: 'Conclusion : le rapport est confirmé'
+    source:
+      undetermined:
+        label: Pas commencé
+        description: 'Par défault : récemment ajouté, le travail n''a pas commencé'
+      credible:
+        label: Crédible
+        description: 'Conclusion : la source est crédible'
+      not_credible:
+        label: Pas crédible
+        description: 'Conclusion : la source n''est pas crédible'
+      slightly_credible:
+        label: Peu crédible
+        description: 'Conclusion : la source est peu crédible'
+      sockpuppet:
+        label: Faux-nez
+        description: 'Conclusion : la source est un faux-nez (anglais : sock puppet)'
   errors:
     messages:
       extension_white_list_error: 'est d''un type %{extension} qui est interdit, seuls sont acceptés %{allowed_types}'
