--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -16,15 +16,23 @@ ar:
       uploaded_file: ملف
     attributes:
       tag:
-        data: وسم
+        data: الوسم
       uploaded_file:
-        file: ملف
+        file: الملف
       uploaded_image:
-        file: صورة
+        file: الصورة
       team:
         slug: المسار
+      source:
+        name: اﻹسم
+      contact:
+        phone: رقم الهاتف
+      comment:
+        text: التعليق
     errors:
       messages:
+        record_invalid: 'خطأ في صحة الإدخال: %{errors}'
+        improbable_phone: غير صحيح
         too_short:
           zero: قصير جداً (الحد الأدنى %{count} حروف)
           one: قصير جداً (الحد الأدنى حرف واحد)
@@ -37,11 +45,6 @@ ar:
           attributes:
             email:
               taken: 'لقد حدثت مشكلة صغيرة: استخدمت هذا البريد الإلكتروني سابقاً لتسجيل الدخول بطريقة أخرى. أرسلنا لك تواً رسالة إلكترونية لنذكرك بطريقة التسجيل السابقة. من فضلك راجع بريدك الإلكتروني ثم سجل الدخول بنفس الطريقة السابقة.'
-  devise:
-    failure:
-      invalid: ' %{authentication_keys} أو كلمة مرور غير صحيحة'
-      not_found_in_database: ' %{authentication_keys} أو كلمة مرور غير صحيحة'
-      unconfirmed: لا بد من تأكيد عنوان بريدك الإلكتروني قبل الإستمرار.
   slug_format_validation_message: 'يقبل الأحرف والأرقام و''-'' فقط '
   slack_webhook_format_wrong: صيغة Slack webhook غير صحيحة
   slug_is_reserved: مأخوذ
