--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -7,24 +7,24 @@ ar:
   statuses:
     media:
       undetermined:
-        label: غير مكتمل
-        description: حالة التقريرالافتراضية، تم إضافته للتو ل-Check، لم يتم البدء في التحقق منه
+        label: لم يبدأ بعد
+        description: حالة التقرير الأولية، أُضيف تواً  إلى Check، لم يتم البدء في التحقق منه
       not_applicable:
-        label: غير حاسم
-        description: لا يمكن إستنتاج حالة التقرير باستخدام الدلائل المتاحة
+        label: غير محسوم
+        description: لا يمكن استنتاج حالة التقرير باستخدام الدلائل المتاحة
       in_progress:
         label: جار التحقق من صحته
         description: تم بدء العمل على التحقق من صحة التقرير، لكن لم يتم تحديد حالته بعد
       not_true:
-        label: 'زائف'
-        description: 'النتيجة: التقرير زائف'
+        label: 'مزيف'
+        description: 'النتيجة: التقرير مزيف'
       verified:
         label: صحيح
         description: 'النتيجة: تم التأكد من صحة التقرير'
     source:
       undetermined:
-        label: غير مكتمل
-        description: حالة المصدرالافتراضية، تم إضافته للتو ل-Check، لم يتم البدء في التحقق منه
+        label: لم يبدأ بعد
+        description: حالة المصدر الأولية، أُضيف تواً إلى Check، لم يتم البدء في التحقق منه
       credible:
         label: موثوق به
         description: 'النتيجة: هذا المصدر موثوق به'
@@ -36,7 +36,7 @@ ar:
         description: 'النتيجة: هذا المصدر قليل المصداقية'
       sockpuppet:
         label: هوية مزيفة
-        description: 'النتيجة: هذا المصدر له هوية مزيفة على الانترنت'
+        description: 'النتيجة: هذا مصدر ذو هوية مزيفة على الانترنت'
   errors:
     messages:
       extension_white_list_error: 'لا يمكن إستخدام امتداد الملف  %{extension} ، الامتدادات المسموحة هي: %{allowed_types}'
@@ -57,7 +57,7 @@ ar:
       team:
         slug: المسار
       source:
-        name: اﻹسم
+        name: الاسم
       contact:
         phone: رقم الهاتف
       comment:
@@ -125,5 +125,5 @@ ar:
       export_project:
         menu: تصدير معلومات المشروع
   reset_password_instructions: التحقق من تعليمات إعادة ضبط كلمة المرور
-  email_not_found: بريد إلكتروني غير موجود
+  email_not_found: هذا البريد الإلكتروني غير موجود
   slack_channel_format_wrong: 'صيغة قناة Slack غير صحيحة - الصيغة المطلوبة هي `#general`'
